----------------------------------------------------------------------------
libgphoto2 CVS HEAD (2.2)

Build system (packagers beware!):

   * now requires libltdl
   * works with contemporary build tools
   * new ./configure parameter set
   * no more accidentally building without libusb (use --without-libusb
     if you insist on that)

libgphoto2:

   * If set, use environment variable CAMLIBS to find the camera drivers.
     Ditto for libgphoto2_port, IOLIBS and IO drivers.

----------------------------------------------------------------------------
libgphoto2 2.1.6

General libgphoto2 features:


Drivers (camlibs):

   * sierra driver:
     - We now support the hidden Sierra Mode on Nikon and Pentax
       cameras (which are otherwise just USB Storage cameras).

       The USB Storage driver is automatically detached on open.
       
       This allows remote image capture with those cameras for
       instance.

----------------------------------------------------------------------------
libgphoto2 2.1.5
 
   * Support multiple USB devices by introducing additional USB ports,
     usb:<bus>,<device>. 
   
drivers (camlibs):

   * PTP driver:
     - Lots of new ids were collected (across all vendors).
     - Raw download support for newer cameras fixed.

   * sq905, mars, aox drivers:
     - New drivers written by Theodore Kilgore for:
	- Aiptek Pencam VGA+, Emprex PCD3600 (mars) 
	- Concord EyeQ mini (aox)
	- Lots of SQ 905 based cameras (sq905)

   * sierra driver:
	- Toshiba PDR support added.

   * sonydscf55 driver:
	- bugfixes, downloading of MPEGs.
	
   * casio-qv driver:
	- working serial support added.

   * canon driver:
	- Several new ids added.

----------------------------------------------------------------------------
libgphoto2 2.1.4 

general:

   * fixed recursion problems during capturing

   * Support for multiple USB cameras NOT included yet.
     Reason: It breaks several applications.

drivers (camlibs):

   * Canon driver: